# 3Dev

./: 3Dev.db  Cargo.toml  README.md  output.ppm  pyproject.toml  requirements.txt
assets/themes/: cobalt.json
myvenv/: pyvenv.cfg
python/: main.py
python/data/: 3Dev.db  graphics_app.db
python/data_management/: data_manager.py  database.py  user_manager.py
python/interface/: asset_gallery.py  dashboard.py  login.py  settings.py  sign_in.py  sign_up.py  version_control.py
python/tests/: test_all.py
python/three_dev/: __init__.py  main.py
python/three_dev/data_management/: user_manager.py
python/three_dev/interface/: sign_in.py
python/utilities/: UI.py
src/: lib.rs  main.py  main.rs
src/interface/: application.py  sign_in.py
src/interface/pages/: sign_in.py
