[package]
name = "three_dev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "three_dev"
crate-type = ["cdylib"]

[dependencies]
glam = "0.29.2"
itertools = "0.13.0"
pyo3 = "0.22.0"
rand = "0.9.0"
image = "0.24.7"