[project]
name = "three-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "andrews-ja", email = "andrewsjag@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
three-dev = "three_dev:main"

[tool.maturin]
module-name = "three_dev._core"
python-packages = ["three_dev"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
